# 3D_Viewer

./: README.md
C8_3DViewer_v1.0-1/code-samples/: main.c
C8_3DViewer_v1.0-1/data-samples/: color.h
C8_3DViewer_v1.0-1/src/: Makefile  viewer.h
C8_3DViewer_v1.0-1/src/3dVFront/3dV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
C8_3DViewer_v1.0-1/src/3dVFront/3dV/3dV_autogen/: moc_predefs.h  mocs_compilation.cpp
C8_3DViewer_v1.0-1/src/3dVFront/3dV/3dV_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_myopenglwidget.cpp
C8_3DViewer_v1.0-1/src/3dVFront/3dV/3dV_autogen/include/: ui_mainwindow.h
C8_3DViewer_v1.0-1/src/Doxygen/: Doxyfile
C8_3DViewer_v1.0-1/src/Functions/: affine.c  affine.h  parser.c
C8_3DViewer_v1.0-1/src/Tests/: test.c
C8_3DViewer_v1.0-1/src/gifimage/: qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h  qtgifimage.pri
